# Ad_Site

./: .env  manage.py  pyproject.toml  requirements.txt
Ad_Site/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  filters.py  models.py  permissions.py  urls.py
ads/migrations/: 0001_initial.py  0002_alter_ad_options.py  0003_alter_ad_options.py  0004_alter_ad_options.py  0005_remove_ad_image.py
ads/serializers/: ads.py  comments.py
ads/views/: ads.py  comments.py
fixtures/: ad.json
frontend_react/: Dockerfile
market_postgres/: docker-compose.yaml  nginx.conf
users/: admin.py  managers.py  models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
